<resources>
    <string name="app_name">Firebase Auth</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="click_to_login">click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">logout</string>
    <string name="order_self_test_kits">Order Self-Test Kits</string>
    <string name="order">Order</string>
    <string name="order_arv_drugs">Order ARV Drugs</string>
    <string name="hiv_and_aids">HIV and AIDS</string>
    <string name="general_information_about_hiv">General Information about HIV</string>
    <string name="personalized_content">Personalized Content</string>
    <string name="general_information_about_hiv2">General information about HIV</string>
    <string name="back">Go back</string>
    <string name="do_you_know_your_status">Do you know your status?</string>
    <string name="yes">Yes</string>
    <string name="preventive_measures_n1_use_condoms_consistently_and_correctly_n2_get_tested_and_know_your_partner_s_status_n3_avoid_sharing_needles_n4_educate_yourself_and_others_about_hiv">Preventive Measures:\n1. Use condoms consistently and correctly\n2. Get tested and know your partner\'s status\n3. Avoid sharing needles\n4. Educate yourself and others about HIV</string>
    <string name="symptoms_of_hiv_n1_fever_n2_fatigue_n3_weight_loss_n4_recurrent_infections">Symptoms of HIV:\n1. Fever\n2. Fatigue\n3. Weight Loss\n4. Recurrent Infections</string>
    <string name="hiv_information_brief_content_about_hiv_goes_here">HIV Information:\nBrief content about HIV goes here.</string>
    <string name="order_drugs">Order Drugs</string>
    <string name="select_test_type">Select test type:</string>
    <string name="swab_test">Swab Test</string>
    <string name="blood_test">Blood Test</string>
    <string name="welcome_to_the_personalized_health_test_kit_activity">welcome to the personalized health test kit activity</string>
    <string name="blood_self_test">Blood self test kit</string>
    <string name="saliva_test">Saliva Test</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="pay_now">Pay Now</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="fetch">Fetch</string>
    <string name="delete_account">Delete Account</string>
    <string name="go_to_profile">Go to Profile</string>
    <string name="unprotected_sexual_intercourse_transmission_can_occur_through_vaginal_anal_or_oral_sex_with_an_infected_partner_without_the_use_of_barrier_methods_like_condoms_or_dental_dams_sharing_needles_or_syringes_injecting_drugs_with_contaminated_equipment_is_a_significant_risk_factor_for_hiv_transmission_mother_to_child_transmission_hiv_can_be_transmitted_from_an_infected_mother_to_her_child_during_childbirth_or_breastfeeding_blood_transfusions_and_organ_transplants_though_rare_in_areas_with_strict_screening_protocols_hiv_transmission_can_occur_through_infected_blood_or_organs_occupational_exposure_healthcare_workers_may_be_at_risk_if_they_come_into_contact_with_hiv_infected_blood_or_other_body_fluids_in_a_healthcare_setting_needlestick_injuries_accidental_needle_injuries_particularly_in_healthcare_or_laboratory_settings_can_lead_to_transmission_if_the_needle_is_contaminated_with_hiv_infected_blood_from_infected_mother_to_child_in_addition_to_childbirth_hiv_can_be_transmitted_during_pregnancy_or_through_breastfeeding">Unprotected sexual intercourse: \n1.Transmission can occur through vaginal, anal, or oral sex with an infected partner without the use of barrier methods like condoms or dental dams. \n2.Sharing needles or syringes: Injecting drugs with contaminated equipment is a significant risk factor for HIV transmission.\n3.Mother-to-child transmission: HIV can be transmitted from an infected mother to her child during childbirth or breastfeeding. \n4.Blood transfusions and organ transplants: Though rare in areas with strict screening protocols, HIV transmission can occur through infected blood or organs. \n5.Occupational exposure: Healthcare workers may be at risk if they come into contact with HIV-infected blood or other body fluids in a healthcare setting. \n6.Needlestick injuries: Accidental needle injuries, particularly in healthcare or laboratory settings, can lead to transmission if the needle is contaminated with HIV-infected blood. From infected mother to child: \n\nIn addition to childbirth, HIV can be transmitted during pregnancy or through breastfeeding. }</string>
    <string name="go_back">Go Back</string>
    <string name="hiv_human_immunodeficiency_virus_is_a_virus_that_attacks_the_immune_system_targets_cd4_cells_t_cells_crucial_for_immune_defense_against_infections_untreated_hiv_can_progress_to_aids_acquired_immunodeficiency_syndrome_transmission_occurs_through_contact_with_certain_body_fluids_blood_semen_vaginal_fluids_rectal_fluids_and_breast_milk_common_modes_of_transmission_include_unprotected_sexual_intercourse_sharing_needles_and_mother_to_child_transmission_during_childbirth_or_breastfeeding_hiv_replicates_and_destroys_cd4_cells_weakening_the_immune_system_weakened_immune_system_leads_to_susceptibility_to_opportunistic_infections_and_certain_cancers_antiretroviral_therapy_art_is_the_standard_treatment_for_hiv_controlling_virus_replication_prevention_measures_include_practicing_safe_sex_using_clean_needles_and_hiv_testing_early_detection_and_treatment_with_art_can_allow_individuals_with_hiv_to_lead_longer_and_healthier_lives">~HIV (Human Immunodeficiency Virus) is a virus that attacks the immune system.\n~It targets CD4 cells (T cells), crucial for immune defense against infections. \n~Untreated HIV can progress to AIDS (Acquired Immunodeficiency Syndrome). \n~Transmission occurs through contact with certain body fluids: blood, semen, vaginal fluids, rectal fluids, and breast milk. \n~Common modes of transmission include unprotected sexual intercourse, sharing needles, and mother-to-child transmission during childbirth or breastfeeding. \n~HIV replicates and destroys CD4 cells, weakening the immune system. \n~Weakened immune system leads to susceptibility to opportunistic infections and certain cancers. \n~Antiretroviral therapy (ART) is the standard treatment for HIV, controlling virus replication. \n~Prevention measures include practicing safe sex, using clean needles, and HIV testing. \n~Early detection and treatment with ART can allow individuals with HIV to lead longer and healthier lives.</string>
    <string name="chat">Chat</string>
    <string name="send">Send</string>
    <string name="sendok">send</string>
    <string name="welcome_to_the_hiv_and_aids_application">*WELCOME TO THE HIV AND AIDS APPLICATION!!*</string>
    <string name="click_to_know_more">Click to know more</string>
    <string name="hiv_human_immunodeficiency_virus_is_a_virus_that_attacks_the_immune_system_it_targets_cd4_cells_t_cells_crucial_for_immune_defense_against_infections_untreated_hiv_can_progress_to_aids_acquired_immunodeficiency_syndrome_transmission_occurs_through_contact_with_certain_body_fluids_blood_semen_vaginal_fluids_rectal_fluids_and_breast_milk">HIV (Human Immunodeficiency Virus) is a virus that attacks the immune system. ~It targets CD4 cells (T cells), crucial for immune defense against infections. ~Untreated HIV can progress to AIDS (Acquired Immunodeficiency Syndrome). ~Transmission occurs through contact with certain body fluids: blood, semen, vaginal fluids, rectal fluids, and breast milk.</string>
    <string name="no">no</string>
    <string name="do_you_have_any_questions_type_below_to_chat">Do you have any questions? Type below to chat **</string>
    <string name="type_a_message">Type a message...</string>
</resources>