<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/pic2">




    <TextView
        android:id="@+id/titleHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/hiv_and_aids"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/generalInfoTextView"
        android:layout_width="424dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/general_information_about_hiv"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/personalizedContentTextView"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_below="@id/generalInfoTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/personalized_content"
        android:textSize="18sp" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="125dp"
        android:layout_height="61dp"
        android:text="@string/back" />


</LinearLayout>